Wed May  6 21:20:31 UTC 2009  Pooja Varshneya  <varshneya_p@n1.vanderbilt.edu>

        * MDE/GME/paradigms/CUTS/paradigm/cuts_uml.xme:

	  Added files for CUTS DSML

Wed May  6 20:15:13 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * cuts/arch/dsto/DDS/DDS_Utility.h:

          Wrapped type name passed to register_topic() with
          CORBA::string_dup, since it is for now a hard-coded
          string constant and not the return value from
          get_type_name().

        * cuts/arch/dsto/DDS/SubAppDDSAdapter.cpp:

          Removed unused code.

        * cuts/arch/dsto/DDS/driver.cpp:

          Added newline at the end of the file.

        * cuts/arch/dsto/DDS/README:

          New file.

Wed May  6 20:10:04 UTC 2009  Pooja Varshneya  <varshneya_p@n1.vanderbilt.edu>

        * MPC/config/cuts_dsml.mpb:

         Added base project for CUTS DSML

Wed May  6 19:49:16 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * cuts/arch/dsto/DDS/run_test.pl:

          New file.

Wed May  6 19:33:04 UTC 2009  Pooja Varshneya  <varshneya_p@n1.vanderbilt.edu>

        * CUTS_CoSMIC.mwc:

          Updated the workspace to add CUTS_UNITE interpreter

        * MDE/GME/paradigms/CUTS:

          Added folder for CUTS DSML

        * MDE/GME/paradigms/CUTS/addons:
        * MDE/GME/paradigms/CUTS/interpreters:

        * MDE/GME/paradigms/CUTS/interpreters/UNITE:

          UNITE interpreter contains files for CUTS_UNITE interpreter

        * MDE/GME/paradigms/CUTS/interpreters/UNITE/ComponentConfig.h:
        * MDE/GME/paradigms/CUTS/interpreters/UNITE/RawComponent.h:
        * MDE/GME/paradigms/CUTS/interpreters/UNITE/RawComponent.cpp:
        * MDE/GME/paradigms/CUTS/interpreters/UNITE/StdAfx.h:
        * MDE/GME/paradigms/CUTS/interpreters/UNITE/StdAfx.cpp:
        * MDE/GME/paradigms/CUTS/interpreters/UNITE/UNITE.mpc:
        * MDE/GME/paradigms/CUTS/interpreters/UNITE/UdmApp.h:
        * MDE/GME/paradigms/CUTS/interpreters/UNITE/UdmApp.cpp: