@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE project SYSTEM "mga.dtd">
 
-<project guid="{AD1482EB-5539-45DE-A2BB-85FE394858B1}" cdate="Thu Apr 09 11:25:21 2009" mdate="Thu Apr 09 11:25:21 2009" version="" metaguid="{D050E6EA-C1A6-4A39-9171-AE1918810D1F}" metaversion="" metaname="UML">
+<project guid="{ED139E30-3FC7-4793-BE4E-3CCBCEF3822D}" cdate="Thu May 07 12:37:01 2009" mdate="Thu May 07 12:37:01 2009" version="" metaguid="{D050E6EA-C1A6-4A39-9171-AE1918810D1F}" metaversion="" metaname="UML">
 	<name>Root Folder</name>
 	<comment></comment>
 	<author></author>
-	<folder id="id-006a-00000001" relid="0x1" childrelidcntr="0x1" kind="RootFolder" guid="{A43D82BA-9687-4dca-8502-08350449F3DB}">
+	<folder id="id-006a-00000001" relid="0x1" childrelidcntr="0x1" kind="RootFolder" guid="{1A8B0B7C-DD8F-4aee-8EB1-22F3F094F457}">
 		<name>CUTS</name>
-		<model id="id-0065-00000001" kind="Package" guid="{3DCA4A88-2724-450c-B3E0-0357FF56A071}" relid="0x1" childrelidcntr="0x3">
+		<model id="id-0065-00000001" kind="Package" guid="{BE89AEA1-D728-4b6d-82A4-90CF579454CC}" relid="0x1" childrelidcntr="0x3">
 			<name>CUTS</name>
 			<attribute kind="alias" status="meta">
 				<value></value>
@@ -15,18 +15,9 @@
 			<attribute kind="version" status="meta">
 				<value>1.00</value>
 			</attribute>
-			<model id="id-0065-00000002" kind="ClassDiagram" role="ClassDiagram" guid="{AC124F8B-C69E-4b4f-8A1F-9AC2057655F0}" relid="0x1" childrelidcntr="0xb">
+			<model id="id-0065-00000002" kind="ClassDiagram" role="ClassDiagram" guid="{E64914DB-C743-4c85-9589-7563E76B7A37}" relid="0x1" childrelidcntr="0xb">
 				<name>zC_GMEInheritanceSheet</name>
-				<regnode name="PartRegs" status="undefined">
-					<value></value>
-					<regnode name="UML" status="undefined">
-						<value></value>
-						<regnode name="Position" isopaque="yes">
-							<value>140,14</value>
-						</regnode>
-					</regnode>
-				</regnode>
-				<atom id="id-0066-00000001" kind="Class" role="Class" guid="{51BE7212-401C-4a8f-AFC5-42AA7D1D4FED}" relid="0x1">
+				<atom id="id-0066-00000001" kind="Class" role="Class" guid="{A75EAC15-C3CA-42e4-9FBA-1CAA87AC9028}" relid="0x1">
 					<name>MgaObject</name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -55,7 +46,7 @@ position : String[0..1]
 						<value></value>
 					</attribute>
 				</atom>
-				<atom id="id-0066-00000002" kind="Inheritance" role="Inheritance" guid="{67F12C2C-710B-4768-B649-DEB0B37EF9F3}" relid="0x2">
+				<atom id="id-0066-00000002" kind="Inheritance" role="Inheritance" guid="{D82482CE-0CA3-4d6d-9B9C-AB9ABA0C8DC1}" relid="0x2">
 					<name></name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -73,7 +64,7 @@ position : String[0..1]
 						</regnode>
 					</regnode>
 				</atom>
-				<reference id="id-0067-00000002" kind="ClassCopy" role="ClassCopy" guid="{BA83DEF2-0B89-48c1-B664-674C470A3B2C}" relid="0x4" referred="id-0066-00000007">
+				<reference id="id-0067-00000002" kind="ClassCopy" role="ClassCopy" guid="{8184687B-B683-4644-9F53-27B2785AD531}" relid="0x4" referred="id-0066-00000007">
 					<name>Unite</name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -94,7 +85,7 @@ position : String[0..1]
 						<value>false</value>
 					</attribute>
 				</reference>
-				<reference id="id-0067-00000003" kind="ClassCopy" role="ClassCopy" guid="{DF79DBE2-6A6F-4d4e-BC62-A0653D2BB9B8}" relid="0x6" referred="id-0066-00000004">
+				<reference id="id-0067-00000003" kind="ClassCopy" role="ClassCopy" guid="{302855F8-325D-4ea4-A586-615B8BC68B86}" relid="0x6" referred="id-0066-00000006">
 					<name>LogFormats</name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -115,7 +106,7 @@ position : String[0..1]
 						<value>false</value>
 					</attribute>
 				</reference>
-				<reference id="id-0067-00000004" kind="ClassCopy" role="ClassCopy" guid="{C1911BB0-5FFD-408f-BCA4-0BEF64B4B797}" relid="0x8" referred="id-0066-00000005">
+				<reference id="id-0067-00000004" kind="ClassCopy" role="ClassCopy" guid="{8E1BBC3F-04A9-4447-9CCE-2665736BED8B}" relid="0x8" referred="id-0066-00000005">
 					<name>LogFormat</name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -136,7 +127,7 @@ position : String[0..1]
 						<value>false</value>
 					</attribute>
 				</reference>
-				<reference id="id-0067-00000005" kind="ClassCopy" role="ClassCopy" guid="{C237B234-60B9-4245-8839-2BD9291076B6}" relid="0xa" referred="id-0066-00000006">
+				<reference id="id-0067-00000005" kind="ClassCopy" role="ClassCopy" guid="{298AFD5F-2423-42ec-AA5C-18A7F4115B13}" relid="0xa" referred="id-0066-00000004">
 					<name>Connection</name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -157,44 +148,35 @@ position : String[0..1]
 						<value>false</value>
 					</attribute>
 				</reference>
-				<connection id="id-0068-00000001" kind="Base" role="Base" guid="{DCEF6D1A-7D93-4551-9046-3AFB75E32447}" relid="0x3">
+				<connection id="id-0068-00000001" kind="Base" role="Base" guid="{3D23DD92-CF18-4185-80BF-D33B01D633BE}" relid="0x3">
 					<name></name>
 					<connpoint role="src" target="id-0066-00000001"/>
 					<connpoint role="dst" target="id-0066-00000002"/>
 				</connection>
-				<connection id="id-0068-0000000a" kind="Sub" role="Sub" guid="{923C932E-FA12-4b2f-9FEF-1DD9457A7D44}" relid="0x5">
+				<connection id="id-0068-0000000a" kind="Sub" role="Sub" guid="{8B43E5CB-83C9-4911-B381-6ED1AC18C074}" relid="0x5">
 					<name></name>
 					<connpoint role="src" target="id-0066-00000002"/>
 					<connpoint role="dst" target="id-0067-00000002"/>
 				</connection>
-				<connection id="id-0068-0000000b" kind="Sub" role="Sub" guid="{869BAE43-01B1-4604-B282-CDD48228587A}" relid="0x7">
+				<connection id="id-0068-0000000b" kind="Sub" role="Sub" guid="{289919A3-BFC7-4b6e-8B8D-15EFEC4FAFED}" relid="0x7">
 					<name></name>
 					<connpoint role="src" target="id-0066-00000002"/>
 					<connpoint role="dst" target="id-0067-00000003"/>
 				</connection>
-				<connection id="id-0068-0000000c" kind="Sub" role="Sub" guid="{536B0F8C-65CB-44a9-A999-AD6E18CA3127}" relid="0x9">
+				<connection id="id-0068-0000000c" kind="Sub" role="Sub" guid="{A66746A9-B370-4933-81E6-8620568CD8C9}" relid="0x9">
 					<name></name>
 					<connpoint role="src" target="id-0066-00000002"/>
 					<connpoint role="dst" target="id-0067-00000004"/>
 				</connection>
-				<connection id="id-0068-0000000d" kind="Sub" role="Sub" guid="{A9C93E0B-C304-4d6e-AA59-7EB2B4A14A4E}" relid="0xb">
+				<connection id="id-0068-0000000d" kind="Sub" role="Sub" guid="{E2838AAF-A404-4e0a-A058-A2C02BFCFFCF}" relid="0xb">
 					<name></name>
 					<connpoint role="src" target="id-0066-00000002"/>
 					<connpoint role="dst" target="id-0067-00000005"/>
 				</connection>
 			</model>
-			<model id="id-0065-00000003" kind="ClassDiagram" role="ClassDiagram" guid="{B9F4F664-85AD-45c1-9D82-D2F37AE65220}" relid="0x2" childrelidcntr="0x4">
+			<model id="id-0065-00000003" kind="ClassDiagram" role="ClassDiagram" guid="{5DE7027C-2CCC-4cdb-974B-FC9CC07A3269}" relid="0x2" childrelidcntr="0x4">
 				<name>zC_RootFolderCompositionSheet</name>
-				<regnode name="PartRegs" status="undefined">
-					<value></value>
-					<regnode name="UML" status="undefined">
-						<value></value>
-						<regnode name="Position" isopaque="yes">
-							<value>98,98</value>
-						</regnode>
-					</regnode>
-				</regnode>
-				<atom id="id-0066-00000003" kind="Class" role="Class" guid="{9D237A4F-77CB-4a92-9BCE-C22BFFAA2762}" relid="0x1">
+				<atom id="id-0066-00000003" kind="Class" role="Class" guid="{86D97FE5-08AF-46de-A685-ACD88FB3A00C}" relid="0x1">
 					<name>RootFolder</name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -222,7 +204,7 @@ position : String[0..1]
 						<value>Folder</value>
 					</attribute>
 				</atom>
-				<reference id="id-0067-00000001" kind="ClassCopy" role="ClassCopy" guid="{A90FBFB0-92A3-4026-ACE4-5ED4CA3160DE}" relid="0x3" referred="id-0066-00000007">
+				<reference id="id-0067-00000001" kind="ClassCopy" role="ClassCopy" guid="{BB29D6BF-5BB0-4e72-86DB-E863A64168F0}" relid="0x3" referred="id-0066-00000007">
 					<name>Unite</name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -243,7 +225,7 @@ position : String[0..1]
 						<value>false</value>
 					</attribute>
 				</reference>
-				<connection id="id-0068-00000002" kind="Composition" role="Composition" guid="{4B7A0E64-C810-4709-8321-BD7D5B88982E}" relid="0x2">
+				<connection id="id-0068-00000002" kind="Composition" role="Composition" guid="{AED872A6-E2F9-4db8-B52F-F979FAC9D428}" relid="0x2">
 					<name></name>
 					<attribute kind="Cardinality">
 						<value>0..*</value>
@@ -257,7 +239,7 @@ position : String[0..1]
 					<connpoint role="dst" target="id-0066-00000003"/>
 					<connpoint role="src" target="id-0066-00000003"/>
 				</connection>
-				<connection id="id-0068-00000003" kind="Composition" role="Composition" guid="{BEA43E27-E855-468f-8CEF-2E08667CF2C6}" relid="0x4">
+				<connection id="id-0068-00000003" kind="Composition" role="Composition" guid="{83C87751-DB80-40eb-8C1A-559D7F854DF0}" relid="0x4">
 					<name></name>
 					<attribute kind="Cardinality" status="meta">
 						<value>0..*</value>
@@ -272,73 +254,9 @@ position : String[0..1]
 					<connpoint role="src" target="id-0067-00000001"/>
 				</connection>
 			</model>
-			<model id="id-0065-00000004" kind="ClassDiagram" role="ClassDiagram" guid="{3B61D9BF-F6A4-49be-8C8A-DC2ABED955F1}" relid="0x3" childrelidcntr="0xb">
+			<model id="id-0065-00000004" kind="ClassDiagram" role="ClassDiagram" guid="{51EB5D4B-6B33-4f2a-983B-C13876F0370F}" relid="0x3" childrelidcntr="0xb">
 				<name>UniteParadigm</name>
-				<regnode name="PartRegs" status="undefined">
-					<value></value>
-					<regnode name="UML" status="undefined">
-						<value></value>
-						<regnode name="Position" isopaque="yes">
-							<value>14,14</value>
-						</regnode>
-					</regnode>
-				</regnode>
-				<atom id="id-0066-00000004" kind="Class" role="Class" guid="{D19470EF-DB96-42d6-AE94-5FC050E4603D}" relid="0x1">
-					<name>LogFormats</name>
-					<regnode name="PartRegs" status="undefined">
-						<value></value>
-						<regnode name="Constraints" status="undefined">
-							<value></value>
-							<regnode name="Position" isopaque="yes">
-								<value>638,132</value>
-							</regnode>
-						</regnode>
-						<regnode name="UML" status="undefined">
-							<value></value>
-							<regnode name="Position" isopaque="yes">
-								<value>575,202</value>
-							</regnode>
-						</regnode>
-					</regnode>
-					<attribute kind="Attributes" status="meta">
-						<value></value>
-					</attribute>
-					<attribute kind="IsAbstract">
-						<value>false</value>
-					</attribute>
-					<attribute kind="Stereotype">
-						<value>Model</value>
-					</attribute>
-				</atom>
-				<atom id="id-0066-00000005" kind="Class" role="Class" guid="{000FC0A1-E5A7-4832-AF09-A13A9FB67913}" relid="0x2">
-					<name>LogFormat</name>
-					<regnode name="PartRegs" status="undefined">
-						<value></value>
-						<regnode name="Constraints" status="undefined">
-							<value></value>
-							<regnode name="Position" isopaque="yes">
-								<value>667,366</value>
-							</regnode>
-						</regnode>
-						<regnode name="UML" status="undefined">
-							<value></value>
-							<regnode name="Position" isopaque="yes">
-								<value>575,313</value>
-							</regnode>
-						</regnode>
-					</regnode>
-					<attribute kind="Attributes">
-						<value>
-value:String</value>
-					</attribute>
-					<attribute kind="IsAbstract">
-						<value>false</value>
-					</attribute>
-					<attribute kind="Stereotype">
-						<value>Model</value>
-					</attribute>
-				</atom>
-				<atom id="id-0066-00000006" kind="Class" role="Class" guid="{C897FC97-4730-4f0e-ABD1-18C9A785E3CB}" relid="0x3">
+				<atom id="id-0066-00000004" kind="Class" role="Class" guid="{8438C409-BF02-42ff-82E4-F1FC0D0862D3}" relid="0x1">
 					<name>Connection</name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -367,7 +285,62 @@ Effect:String</value>
 						<value>Connection</value>
 					</attribute>
 				</atom>
-				<atom id="id-0066-00000007" kind="Class" role="Class" guid="{64415F83-0C15-48af-BF1E-B7AB77AC0030}" relid="0x4">
+				<atom id="id-0066-00000005" kind="Class" role="Class" guid="{F3876F02-72C4-4cdb-B0BC-2737E7B67F7F}" relid="0x2">
+					<name>LogFormat</name>
+					<regnode name="PartRegs" status="undefined">
+						<value></value>
+						<regnode name="Constraints" status="undefined">
+							<value></value>
+							<regnode name="Position" isopaque="yes">
+								<value>667,366</value>
+							</regnode>
+						</regnode>
+						<regnode name="UML" status="undefined">
+							<value></value>
+							<regnode name="Position" isopaque="yes">
+								<value>575,313</value>
+							</regnode>
+						</regnode>
+					</regnode>
+					<attribute kind="Attributes">
+						<value>
+value:String</value>
+					</attribute>
+					<attribute kind="IsAbstract">
+						<value>false</value>
+					</attribute>
+					<attribute kind="Stereotype">
+						<value>Model</value>
+					</attribute>
+				</atom>
+				<atom id="id-0066-00000006" kind="Class" role="Class" guid="{B606C656-FB9C-4598-91C4-E0547F0CBA20}" relid="0x3">
+					<name>LogFormats</name>
+					<regnode name="PartRegs" status="undefined">
+						<value></value>
+						<regnode name="Constraints" status="undefined">
+							<value></value>
+							<regnode name="Position" isopaque="yes">
+								<value>638,132</value>
+							</regnode>
+						</regnode>
+						<regnode name="UML" status="undefined">
+							<value></value>
+							<regnode name="Position" isopaque="yes">
+								<value>575,202</value>
+							</regnode>
+						</regnode>
+					</regnode>
+					<attribute kind="Attributes" status="meta">
+						<value></value>
+					</attribute>
+					<attribute kind="IsAbstract">
+						<value>false</value>
+					</attribute>
+					<attribute kind="Stereotype">
+						<value>Model</value>
+					</attribute>
+				</atom>
+				<atom id="id-0066-00000007" kind="Class" role="Class" guid="{E2BC8201-4251-4990-8A02-3BA0099243FB}" relid="0x4">
 					<name>Unite</name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -397,7 +370,7 @@ Aggregation:String</value>
 						<value>Model</value>
 					</attribute>
 				</atom>
-				<atom id="id-0066-00000008" kind="Connector" role="Connector" guid="{9A1F0DA9-CC93-42dd-AE69-10D5B4199169}" relid="0x8">
+				<atom id="id-0066-00000008" kind="Connector" role="Connector" guid="{9B658C02-B730-4894-ACE2-22E3722AFF23}" relid="0x8">
 					<name></name>
 					<regnode name="PartRegs" status="undefined">
 						<value></value>
@@ -409,7 +382,21 @@ Aggregation:String</value>
 						</regnode>
 					</regnode>
 				</atom>
-				<connection id="id-0068-00000004" kind="Composition" role="Composition" guid="{B8955B6B-4834-4318-9734-AF9A5B9EEB12}" relid="0x5">
+				<connection id="id-0068-00000004" kind="Composition" role="Composition" guid="{92F9E992-103F-440f-8DE2-93BAA15487AC}" relid="0x5">
+					<name></name>
+					<attribute kind="Cardinality">
+						<value>0..*</value>
+					</attribute>
+					<attribute kind="ChildRole">
+						<value></value>
+					</attribute>
+					<attribute kind="ParentRole" status="meta">
+						<value></value>
+					</attribute>
+					<connpoint role="src" target="id-0066-00000004"/>
+					<connpoint role="dst" target="id-0066-00000006"/>
+				</connection>
+				<connection id="id-0068-00000005" kind="Composition" role="Composition" guid="{0BB7BF67-177E-45f6-8A68-5F9C7EDE76DC}" relid="0x6">
 					<name></name>
 					<attribute kind="Cardinality">
 						<value>1..*</value>
@@ -420,24 +407,10 @@ Aggregation:String</value>
 					<attribute kind="ParentRole" status="meta">
 						<value></value>
 					</attribute>
-					<connpoint role="dst" target="id-0066-00000004"/>
 					<connpoint role="src" target="id-0066-00000005"/>
+					<connpoint role="dst" target="id-0066-00000006"/>
 				</connection>
-				<connection id="id-0068-00000005" kind="Composition" role="Composition" guid="{D298A8C6-4E06-49cf-9B2D-4A7FC49C035C}" relid="0x6">
-					<name></name>
-					<attribute kind="Cardinality">
-						<value>0..*</value>
-					</attribute>
-					<attribute kind="ChildRole">
-						<value></value>
-					</attribute>
-					<attribute kind="ParentRole" status="meta">
-						<value></value>
-					</attribute>
-					<connpoint role="dst" target="id-0066-00000004"/>
-					<connpoint role="src" target="id-0066-00000006"/>
-				</connection>
-				<connection id="id-0068-00000006" kind="Composition" role="Composition" guid="{73E01CCC-D5F7-48d3-87FD-BE6039A58EAE}" relid="0x7">
+				<connection id="id-0068-00000006" kind="Composition" role="Composition" guid="{1E6A3A7D-0270-4ebc-93B6-33D2C4860B25}" relid="0x7">
 					<name></name>
 					<attribute kind="Cardinality">
 						<value>1</value>
@@ -448,10 +421,10 @@ Aggregation:String</value>
 					<attribute kind="ParentRole" status="meta">
 						<value></value>
 					</attribute>
-					<connpoint role="src" target="id-0066-00000004"/>
+					<connpoint role="src" target="id-0066-00000006"/>
 					<connpoint role="dst" target="id-0066-00000007"/>
 				</connection>
-				<connection id="id-0068-00000007" kind="Src" role="Src" guid="{AF775AC5-E7D8-4c8b-9BB2-A81CB138E21D}" relid="0x9">
+				<connection id="id-0068-00000007" kind="Src" role="Src" guid="{08B69B65-725D-4411-9FF8-36D4121AD04E}" relid="0x9">
 					<name></name>
 					<attribute kind="Cardinality">
 						<value>0..*</value>
@@ -462,7 +435,7 @@ Aggregation:String</value>
 					<connpoint role="src" target="id-0066-00000005"/>
 					<connpoint role="dst" target="id-0066-00000008"/>
 				</connection>
-				<connection id="id-0068-00000008" kind="Dst" role="Dst" guid="{DCD3ECF1-A257-43d4-BAF0-67E4AC95B49B}" relid="0xa">
+				<connection id="id-0068-00000008" kind="Dst" role="Dst" guid="{72435490-2308-4ec5-BBC1-4A8289863D59}" relid="0xa">
 					<name></name>
 					<attribute kind="Cardinality">
 						<value>0..*</value>
@@ -473,9 +446,9 @@ Aggregation:String</value>
 					<connpoint role="dst" target="id-0066-00000005"/>
 					<connpoint role="src" target="id-0066-00000008"/>
 				</connection>
-				<connection id="id-0068-00000009" kind="AssociationClass" role="AssociationClass" guid="{BF4E2C7E-5362-4f8a-8051-B3AAE1537896}" relid="0xb">
+				<connection id="id-0068-00000009" kind="AssociationClass" role="AssociationClass" guid="{972146FB-D0F6-467a-A582-9D6A4A2D05A9}" relid="0xb">
 					<name></name>
-					<connpoint role="dst" target="id-0066-00000006"/>
+					<connpoint role="dst" target="id-0066-00000004"/>
 					<connpoint role="src" target="id-0066-00000008"/>
 				</connection>
 			</model>
